--- a/Dissertation/part1.tex
+++ b/Dissertation/part1.tex
@@ -6,7 +6,7 @@
 
 % ==========================================================
 
-\section{Механизмы генерации убегающих электронов}\label{sec:ch1/sec1}
+\section{Механизмы генерации убегающих электронов}
 
 В плазме токамаков имеют место несколько механизмов генерации убегающих электронов. Это:
 
@@ -136,12 +136,6 @@
 
 % ==========================================================
 
-\subsection{Рождение электронов в токамаке}
-
-
-
-% ==========================================================
-
 \section{Механизмы ограничения энергии убегающих электронов}
 
 На реальных установках существует ряд механизмов, которые ограничивают максимальную энергию убегающих электронов: 
@@ -174,9 +168,10 @@
 
 Если в нулевом приближении пренебречь торможением электрона и радиационными потерями, то должно быть очевидно, что за время разряда токамака с момента своего рождения электрон может набрать только конечную энергию, которая определяется временем ускорения и электрическим полем в плазме за время ускорения. Эта величина может быть грубо оценена в предположении, что $v = c$ как
 
-\begin{equation*}
+\begin{equation}
+  \label{eq:MaxRunawayEnergyLimit}
   \varepsilon(t) = \frac{ e c }{ 2 \pi R_0 } \int \limits_{t_b}^{t} V_{loop}(t') d t'
-\end{equation*}
+\end{equation}
 где $t_b$ --- время перехода электрона в режим убегания, $V_{loop}$ --- напряжение обхода. Очевидно, что реальная энергия электрона всегда будет меньше этой величины \cite{Shevelev2019th}.
 
 % ----------------------------------------------------------
@@ -238,8 +233,6 @@
 \end{equation*}
 где $N_c$ --- число катушек тороидального поля, $n$ --- номер тороидальной гармоники. Эффективность механизма пульсаций для ограничения энергии убегающих электронов сильно зависит от амплитуды пульсаций: при заданном электрическом поле для эффективного взаимодействия необходима достаточно большая амплитуда пульсаций. В токамаке сила пульсаций больше для низких номеров тороидальных гармоник и быстро затухает по радиусу от края плазмы. Поэтому следует ожидать, что эффекты будет наиболее существенным в периферийных областях плазмы \cite{MartinSolis1998}.
 
-%и при малых значениях числа тороидальной гармоники. Экспериментальные доказательства эффективного взаимодействия убегания и пульсаций были получены в нескольких устройствах [9, 12, 13], и было предсказано, что резонанс между электронной гирочастотой и основной частотой пульсаций может создать верхнюю границу энергии убегания во время разрушения плазмы в большие токамаки, такие как Joint European Torus ~JET!14 или 15ITER. Анализ динамики взаимодействия между пульсациями тороидального поля и убегающим движением с использованием представленного здесь описания пробных частиц уже рассматривался в предыдущей работе16 и станет предметом будущей публикации.
-
 % ----------------------------------------------------------
 
 \subsection{Плазменные неустойчивости}
@@ -250,13 +243,63 @@
 
 Существенно влияние различных МГД неустойчивостей, которые приводят к выходу убегающих электронов, существующих в плазме, на переферию плазмы, а электроны с периферии выходят на стенки или лимиттер токамака. Соответствующие всплески рентгеновского излучения неоднократно наблюдались на небольших установках \cite{Shevelev2016,Shevelev2018}. 
 
+% ==========================================================
+
+\section{Методы диагностики убегающих электронов}
+
+Диапазон энергий убегающих электронов очень широк: это значения от тепловых энергий электронов (несколько кэВ во время типичного разряда) до десятков МэВ. Этот широкий диапазон энергий не может быть исследован какой-либо одной диагностикой~\cite{Breizman2019}. Поэтому для диагностики энергии убегающих электронов, питч-угла и пространственного распределения используются различные методы диагностики, которые кратко будут рассмотрены ниже.
+
+% ----------------------------------------------------------
+
+\subsection{Тормозное излучение}
+
+Тормозное излучение является одним из наиболее широко используемых диагностических инструментов для диагностики убегающих электртонов в токамаках~\cite{Breizman2019,Cooper2016,Shevelev2013,Chugunov2011}. Строго говоря, термин  <<тормозное излучение>> относится к любому излучению, обусловленному замедлением заряженных частиц, но мы будем использовать здесь тормозное излучение в более узком смысле — излучение электронов, замедляющихся в веществе. Тормозное излучение от убегающих электронов может быть объемным тормозным излучением тонкой мишени, когда убегающие электроны рассеиваются ионами плазмы, или тормозным излучением толстой мишени, когда убегающие электроны попадают на компоненты, обращенные к плазме. Объемная эмиссия преобладает, когда убегающие электроны хорошо удерживаются, тогда как поверхностное тормозное излучение преобладает во время быстрой потери электронов, например связанная с выбросами в ходе МГД нействойчивости или в ходе выхода на лимиттер.~\cite{Breizman2019}
+
+Энергетический спектр испускаемых квантов жёсткого рентгеновского излучения имеет верхнюю границу при энергии падающего электрона и пик примерно при 1/4~энергии падающего электрона~\cite{Seltzer1985,Kuznetsov1974,Shevelev2013}. Угловое распределение квантов тормозного излучения имеет тенденцию к изотропии до 1~МэВ (мягкий и средний диапазоны рентгеновского излучения); при больших энергиях излучение приобретает анизотропный характер и преимущественно направлено в ту же сторону, куда двигается электрон. Электрон-ионные столкновения преобладают над электрон-электронными столкновениями при образовании тормозного излучения, и, таким образом, тормозное излучение имеет зависимость от заряда ядра как $Z^2$, что делает излучение весьма чувствительным к содержанию примесей в плазме~\cite{Seltzer1985,Breizman2019}.
+
+Обнаружение фотонов тормозного излучения обычно осуществляется с использованием полупроводниковых детекторов при более низких энергиях и сцинтилляционных детекторов при более высоких энергиях. В диапазоне 1--10~кэВ в токамаках наиболее распространены Si детекторы, а в диапазоне 10--1000~кэВ чаще используются детекторы CdTe из-за их более высокой тормозной способности~\cite{Esposito2003}. Полупроводниковые детекторы непосредственно обнаруживают ток от электронно-дырочных пар, создаваемых фотонами, и могут достигать очень высокой эффективности обнаружения фотонов (в некоторых случаях вплоть до единичной квантовой эффективности). В сцинтилляционных детекторах используются прозрачные материалы высокой плотности для обнаружения излучения видимого света, возникающего в результате погложения кванта жёсткого рентгена. Излучение видимого света обусловлено рекомбинацией электронов в связанные состояния, тогда как механизмами поглощения энергии налетающих квантов являются фотоэлектрический эффект (для квантов с энергией менее 1~МэВ), комптоновское рассеяние при промежуточных энергиях и образование электронно-позитронных пар при высокорелятивистских энергиях (>10 МэВ). Сцинтилляционные материалы, используемые в токамаках, включают в себя такие материалы как NaI(Tl)~\cite{Shevelev2004,Vlainic2015}, BGO~\cite{Shevelev2013,James2011} и LaBr3(Ce)~\cite{Shevelev2016,Nocente2010}; разные сцинтилляторы отличаются такими параметрами, как уровень сигнала, скорость затухания сигнала, возможность раздеоения сигналов от нейтронов и рентгена, а так же ценой. Подсчет сигналов от фотонов тормозного излучения может производиться либо в токовом режиме, либо в режиме спектроскопии. В токовом режиме просто измеряется полный фототок от детектора (обычно пропорциональный потоку энергии фотонов)~\cite{Savrukhin2002}. В режиме спектроскопии измеряются амплитуды отдельных импульсов квантов, что позволяет реконструировать функцию распределения фотонов по энергии.~\cite{Shevelev2013,Khilkevitch2013} Таким образом, режим спектроскопии предоставляет больше информации, но является более сложным в экспериментальном плане, требуя более высокого коэффициента усиления, лучшей защиты от шума и лучшей коллимации. Экранирование (блокировка от рассеянного излучения) и коллимация (сужение поля зрения до определенной хорды обзора) в целом представляют собой проблему при измерении тормозного излучения убегающих электронов, поскольку часть жёсткого рентгеновского спектра чрезвычайно трудно заблокировать, для этого требуется несколько сантиметров свинцового экрана для значительного ослабления.~\cite{Cooper2016,Breizman2019}
+
+% ----------------------------------------------------------
+
+\subsection{Синхротронное излучение}
+
+Обычно с точки зрения принятной в диагностики высокотемпературной плазмы терминологии, под <<синхротронным излученим>> понимают излучение света релятивистскими электронами в магнитном поле, а <<циклотронным излчением>> называют излучение нерелятивистскими электронами в магнитном поле; это не вполне соответствует приятым обозначениям в других областях науки~\cite{Breizman2019}. В токамаках среднего и большого размера гироскопическое движение электронов обычно является основной причиной генерации излучения. В этом случае мощность синхротронного излучения сильно зависит от кинетической энергии электронов (как $\gamma^4$) и от их питч-угла (как $\theta^2$)~\cite{Pankratov1999}. Сам питч-угол зависит от содержания примесей в плазме, что приводит к синхротронному излучению, которое имеет тенденцию сильно увеличиваться с увеличением количества примесей. Для типичных наблюдаемых почти равновесных функций распределения энергии убегающих электронов после срывов в токамаках среднего размера синхротронное излучение исходит преимущественно от убегающих электронов в диапазоне энергий 30--40 МэВ с пиками в среднем инфракрасном диапазоне (2--4 мкм)~\cite{Stahl2013}. Излучение имеет очень сильную анизотропию по направлению движения пучка, поэтому для его регистрации требуется система с тангенциальным обзором.~\cite{Breizman2019} 
+
+% ----------------------------------------------------------
+
+\subsection{Циклотронное излучение}
+
+Измерение электронной циклотронной эмиссии (ЭЦЭ) в микроволновом (ghbvthyj 50--200~ГГц) диапазоне частот --- одна из первых диагностик токамаков~\cite{Costley1974}. В нем используются либо быстрые системы (радиометры), либо медленные системы (интерферометры). Быстрая диагностика электрон-циклотронной эмиссии обычно использует гетеродинные радиометры для разделения микроволнового сигнала на отдельные каналы, каждый из которых имеет отдельный полосовой фильтр для выделения определенной полосы частот, что дает очень быстрые (более 1~МГц) измерения излучения ЭЦЭ с грубым (около 1~ГГц) спектральным разрешением. Более медленные (менее 100~Гц), широкополосные и с более высоким спектральным разрешением (менее 1~ГГц) измерения ЭЦЭ обычно получают с помощью интерферометров Майкельсона. Измерения ЭЦЭ обычно проводятся при одной поляризации, либо перпендикулярной тороидальному магнитному полю, либо параллельной магнитному полю. Направление наблюдения обычно радиально внутрь токамака, с тем чтобы измерить профиль радиальной температуры плазмы.~\cite{Breizman2019}
+
+Быстрые электроны приводят к росту уровня сигнала ЭЦЭ и вызывают уширение функции распределения, что делает ЭЦЭ потенциально полезной диагностикой для анализа убегающих электронов. На сегодняшний день, однако, сложность интерпретации вклада ЭЦЭ от убегающих электронов ограничивает использование этой диагностики в основном качественным использованием.~\cite{Breizman2019} 
+
+% ----------------------------------------------------------
+
+\subsection{ Инфракрасное излучение }
+
+Использование для диагностики инфракрасного излучения может использоваться для изучения структуры тепловых нагрузок, возникающих в результате выхода убегающих электронов на стенку токамака, на протяженных участках внутренней поверхности камеры. Хотя по анализу инфракрасного излучения можно определить поток энергии, передаваемый от убегающих электронов конструкциям камеры, но на практике это оказывается довольно сложной задачей. Инфракрасная диагностика используется на токамаках JET и DIII-D~\cite{Breizman2019,Lehnen2009,Hollmann2017}.
+
+% ----------------------------------------------------------
+
+\subsection{Прочие методы диагностики}
+
+В принципе, эмиссия примесных линий так же может быть использована для диагностики убегающих электронов, но в этой области сделано мало исследований. Ряд измерений проводились на DIII-D, так же проводились измерения K$\alpha$ излучения криптона с энергией 12.6~кэВ после газонапуска.~\cite{Breizman2019}
+
+На токамаке TEXTOR использовалась зондовая диагностика в области периферийной SOL плазмы. Наконечник зонда содержал десять кристаллов YSO (Y2SiO3:Ce), соединенных оптическими волокнами с фотоумножителями. Сцинтилляторы были защищены вольфрамовой защитой. Энергетический диапазон этой диагностики составлял примерно 5–20 МэВ.~\cite{Kudyakov2008} 
+
+Так же можно использовать и черенковские зонды, которые так же содержат экранированный прозрачный материал вместе и оптоволокно для вывода сигнала на фотодетектор. В качестве материалов для таких зондов используется алмаз и AlN. Черенковское излучение возникает в любом материале при попадании частиц со сверхсветовой скоростью, например энергии электронов это энергии выше 58~кэВ в алмазе или 175~кэВ в пластике. Черенковские детекторы использовались на нескольких токамаках, например Tore Supra и COMPASS~\cite{Zebrowski2018}.
+
+При нормальном сценарии работы токамака в эмиссии нейтронов токамака обычно преобладают реакции синтеза D-D, особенно в экспериментах с нагревом пучка. Однако при наличии достаточно больших популяций убегающих электронов или при использовании плазмы H или He образование нейтронов может быть в первую очередь связано с фотоядерными ядерными реакциями в материале стенки. Это нейтронное излучение может быть зарегистрировано многими нейтронными детекторами. Обычно фотонейтронный сигнал может быть использован только в качестве детектора выхода высокоэнергетичных электронов на стенку без возможности определения энергетических характеристик электронов.~\cite{Breizman2019,Strachan1977}
+
+Томсоновское рассеяние лазерного света на электронах является хорошо известной диагностикой токамака, и способность томсоновского рассеяния видеть немаксвелловские (но нерелятивистские) электроны была отмечена на токамаке C-MOD. Релятивистский аналог, индуцированное лазером обратное комптоновское рассеяние, был предложен для диагностики убегающих электронов, но пока не реализован.~\cite{Breizman2019,Pieroni1975,Wurden2014}
 
 % ==========================================================
 
-\section{Методы диагностики убегающих электронов}\label{sec:ch1/sec2}
+\section{Использование сцинтиляционных детекторов для регистрации тормозного излучения от убегающих электронов}
 
-Ы!
+В настоящей работе в основном будет рассматриваться диагностика убегающих электронов по тормозному излучению с помощью сцинтиляционных детекторов. Ниже будет более подробно освещено устройство и особенности таких детекторов.
 
-% ==========================================================
+\subsection{ Сцинтилляционные кристаллы }
+
 
 \FloatBarrier
