--- a/Dissertation/part3.tex
+++ b/Dissertation/part3.tex
@@ -68,9 +68,10 @@
 где $\epsilon$ --- параметр алгоритма.~\cite{Shevelev2013} 
 
 Базовый алгоритм может быть модифицирован. В задачах гамма-диагностики о функции $g$ обычно имеется хотя бы минимальная априорная информация. Так, для спектра излучения, который образуется в результате ядерных реакций, присутствует ряд дискретных линий. Эти линии могут быть уширены за счёт доплеровского уширения линий. Для такого спектра можно использовать процедуру, основанную на работе~\cite{Morhac2011} и модифицированную в~\cite{Khilkevitch2013,Shevelev2013}: на каждом k-том шаге проводить <<вытягивание>> линий с помощью процедуры
-\begin{equation*}
+\begin{equation}
+  \label{eq:BoostMlemDisturb}
   g^{p, boost}_i = \left( g^p_i \right)^{\beta} \cdot \frac{ \sum_j g^p_i }{ \sum_j g^{p, boost}_j }
-\end{equation*}
+\end{equation}
 где значение степени $\beta$ --- параметр алгоритма, он должен быть чуть больше 1.0 (например, 1.01). 
 
 Спектр излучения, генерируемого убегающими электронами, обычно имеет непрерывный характер. В это случае предлагается использовать другую модификацию: на каждом l-ом шаге сглаживать полученное решение. Можно использовать линейное сглаживание с весом:
@@ -167,6 +168,7 @@
 \section{ Восстановление функции распределения убегающих электронов по измеренному спектру излучения }
 
 \subsection{ Использование метода ML-EM для восстановления функции распределения убегающих электронов }
+\label{sec:runawayReconstructionMlem}
 
 При торможении электрон испускает поток квантов жёсткого рентгеновского излучения, которое может быть зарегистрировано гамма детекторов. Спектр рентгеновского излучения имеет почти непрерывный характер; максимальная энергия рождённых квантов равна кинетической энергии электрона, однако вероятность рождения единственного кванта с максимальной энергией не велика, большая часть спектра излучения приходится на меньшие энергии.~\cite{Kuznetsov1974}
 
@@ -188,21 +190,28 @@
     = & \int \limits_0^{+\infty} d \varepsilon'' f( \varepsilon'' ) h^{tot}( \varepsilon, \varepsilon'' ) + n(\varepsilon)
   \end{alignedat}  
 \end{equation}
-где $h^{tot}( \varepsilon, \varepsilon'' )$ --- свёртка функций отклика из уравнения~\ref{eq:RunawayConvolution} с передаточной функцией из уравнения~\ref{eq:BaseConvolution}. Вид этого уравнения полностью совпадает с видом уравнения~\ref{eq:BaseConvolution}, и далее для решения уравнения~\ref{eq:RunawayBaseConvolution} можно применять описанный выше метод ML-EM.~\cite{Shevelev2013}
+где $h^{tot}( \varepsilon, \varepsilon'' )$ --- свёртка функций отклика из уравнения~\ref{eq:RunawayConvolution} с передаточной функцией из уравнения~\ref{eq:BaseConvolution}. Вид этого уравнения полностью совпадает с видом уравнения~\ref{eq:BaseConvolution}, и далее для решения уравнения~\ref{eq:RunawayBaseConvolution} можно применять описанный выше метод ML-EM. В связи с характером искомого решения нецелесообразно использовать возведение в степень для вытягивания пиков (уравнение~\ref{eq:BoostMlemDisturb}), но целесообразно чаще применять процедуру сглаживания. Ошибку восстановления функции распределеня можно проводить описанным выше методом Монте-Карло.~\cite{Shevelev2013}
 
 % ----------------------------------------------------------
 
-\subsection{ Проверка корректности восстановления и отработка методики восстановления функции распределения убегающих электронов по энергии }
+\subsection{Определение максимальной энергии убегающих электронов}
+
+По итогам восстановления функции распределения обычно имеет ненулевое значение во всём диапазоне энергий; однако в тех диапазонах энергий, где функция электронов фактически равна нулю, значение вычисленной восстановленной функции распределения оказывается близка к нулю с точностью до машинной погрешности, то есть на 10--14 порядков меньше, чем значение функции распределения в её максимуме. Поскольку в правой части функции распределения наблюдается спад значений функции к ненулевому значению, встаёт вопрос о том, какую именно энергию выбирать в качестве максимальной энергии убегающих электронов. Очевидно, что фактически такая энергия имеет физический смысл согласно уравнению~\ref{eq:MaxRunawayEnergyLimit} (в отличие например от максвелловского распределения, где понятие максимальной энергии не имеет строгого физического смысла). 
+
+Предлагается для поиска максимальной энергии найти такое значение $\varepsilon_{max}$, что
+\begin{equation}
+  \label{eq:RunawayMaxEnergy}
+  \rho = 1 - \frac{ \int \limits_{\varepsilon_0}^{\varepsilon_{max}} f(\varepsilon) d\varepsilon }{ \int \limits_{\varepsilon_0}^{+\infty} f(\varepsilon) d\varepsilon }
+\end{equation}
+где значение $\rho$ --- параметр, равный например $10^{-3}$. Значение начальной энергии интегрирования $\varepsilon_0$ ненулвевое, потому что в некоторых ситуациях функция распределения убегающих электронов очень сильно возрастает вблизи нуля, что приводит к сильной зависимости результата вычисления от порога. Обычно значение $\varepsilon_0$ имеет смысл выбирать в районе 1--2~МэВ. По физическому смыслу формулы~\ref{eq:RunawayMaxEnergy} больше выбранной максимальной энергии $\varepsilon_{max}$ на функции распределения находится статистически незначительное число электронов. Как показывает практика, значение $\varepsilon_{max}$ очень слабо зависит от произвольно выбираемых параметров $\rho$ и $\varepsilon_0$, поскольку обычно правый край полученной функции распределения имеет крутой правый край. Крутизна этого края определяется как физическими процессами, так и является следствием применения процедуры сглаживания, которая применяется при восстановлении функции распределения.~\cite{Shevelev2017}
+
+% ----------------------------------------------------------
+
+\subsection{ Проверка корректности восстановления и отработка методики восстановления функции распределения убегающих электронов по энергии на модельных спектрах }
 
 Если для тестирования процедуры восстановления дискретного спектра можно использовать калибровочные источники гамма излучения, то для тестирования восстановления функции распределения убегающих электронов подобный удобный тестовый объект с известным распределением в нашем распоряжении отсутствует. Поэтому для проверки были использованы сгенерированные и обработаны модельные сигналы.
 
-Для тестирования с помощью кода MCNP с учетом положения детектора NaI(Tl) в Roof lab были рассчитаны спектры тормозного излучения, соответствующие потокам жёсткого рентгена от моноэнергетических электронов в средней плоскости вакуумной камеры токамака JET. Некоторые из этих спектров показаны на рисунке~\ref{fig:mcnpRunawayResponseJetSh2013}. В модели пучок ускоренных электронов с заданным распределением энергии в экваториальной плоскости корпуса JET взаимодействует с объемными ионами. Распределение энергии электронов, используемое в моделировании, показано на рисунке 6(b) зеленой линией с широким пиком в области высоких энергий. Такая форма распределения вполне реальна при наличии первичных и вторичных механизмов генерации УЭ, а также в условиях, ограничивающих неуправляемый рост энергии, например, за счет потерь на синхротронное излучение [22]. Смоделирован спектр ЖРИ, который мог быть зарегистрирован детектором NaI(Tl) с распределением статистики Пуассона. Он показан на рис. 6(с) черными точками. После этого применяется процедура деконволюции. Результат показан на рис. 6(b) красной пунктирной линией. Результат свертки полученного распределения электронов с функцией отклика детектора представлен на рисунке 6(c) синей пунктирной линией. Расчеты проводились в вакуумной геометрии JET для дейтериевой плазмы с плотностью электронов 5 · 1019 м−2 и 2\% примеси углерода. Интеграл по полученному распределению равен числу электронов, прошедших через видимый объем плазмы.
-детектором во время сбора спектра. В измеренном спектре предполагалась статистика Пуассона. х 2 теста
-дал следующие результаты: χred 2
- = 0,6 для спектров ЖРИ.
-Для модели и полученных распределений электронов χred
- 2
- = 0,71.
+Для тестирования с помощью кода MCNP с учетом положения детектора NaI(Tl) в Roof lab с вертикальной линией обзора на токамаке JET были рассчитаны спектры тормозного излучения, соответствующие потокам жёсткого рентгена от моноэнергетических электронов в средней плоскости вакуумной камеры. Некоторые из этих спектров показаны на рисунке~\ref{fig:mcnpRunawayResponseJetSh2013}. В модели пучок ускоренных электронов с заданным распределением энергии в экваториальной плоскости корпуса JET взаимодействует с объемными ионами. Расчеты проводились в геометрии вакуумной камеры токамака JET для дейтериевой плазмы с плотностью электронов $ 5 \cdot 10^{19}$~м${}^{-3}$ и 2\% примеси углерода. Расчёты выполнены А.~Шевелевым.~\cite{Shevelev2013} 
 
 \begin{figure}[ht!]
   \centerfloat{ \includegraphics[width=0.52\linewidth]{mcnpRunawayResponseJetSh2013} }
@@ -210,9 +219,99 @@
   \label{fig:mcnpRunawayResponseJetSh2013}
 \end{figure}
 
+Распределение энергии электронов, используемое в моделировании, показано на рисунке~\ref{fig:runawayJetSimulationEdfSh2013} зеленой линией с широким пиком в области высоких энергий. Такая форма распределения вполне реальна при наличии первичных и вторичных механизмов генерации убегающих электронов, а также в условиях, ограничивающих неуправляемый рост энергии, например, за счет потерь на синхротронное излучение~\cite{MartinSolis1999,Shevelev2013}. Интеграл по  распределению равен числу электронов, прошедших через видимый объем плазмы. По этой функции распределения с использованием функции генерации, изображённой на рисунке~\ref{fig:mcnpRunawayResponseJetSh2013} и с использованием функции, изображённой на рисунке~\ref{fig:mcnpInstFunctionsNaI} был построен спектр жёсткого рентгеновского излучения, который регистрируется детектором. Этот спектр изображён зелёными точками на рисунке~\ref{fig:runawayJetSimulationSpectrumSh2013}. На спектр был наложен шум, соответствующий пуассновской статистике.~\cite{Shevelev2013}
 
-Восстановленное распределение электронов продемонстрировало очень близкое совпадение с модельным спектром и дало максимальную энергию 11 МэВ с очень высокой точностью, в то время как измерения HXR дали 10 МэВ. В реальных измерениях HXR высокоэнергетический диапазон спектра HXR может иметь очень плохую статистику: единичные отсчеты на канал или полное отсутствие событий. Причинами этого являются ограниченное время набора спектра и ограничение нагрузочных характеристик детектора. Детекторы имеют мертвое время при регистрации гамма-излучения, что приводит к потерям событий и ограничению максимальной скорости счета. Максимально достижимая скорость счета зависит от свойств кристалла и электронной схемы. Алгоритм ML-EM использует информацию из «видимой» части спектра для восстановления функции распределения в каждом
+\begin{figure}[ht!]
+  \centerfloat{ \includegraphics[width=0.52\linewidth]{runawayJetSimulationEdfSh2013} }
+  \caption{ Функции распределения убегающих электронов: зелёным цветом показана сгеренированая функция распределения, красным --- восстановленная.~\cite{Shevelev2013} }
+  \label{fig:runawayJetSimulationEdfSh2013}
+\end{figure}
 
+\begin{figure}[ht!]
+  \centerfloat{ \includegraphics[width=0.52\linewidth]{runawayJetSimulationSpectrumSh2013} }
+  \caption{ Спектр жёсткого рентгеновского излучения: зелёным цветом показан спектр, соответствующий сгенерированной функции распределения с рисунка~\ref{fig:runawayJetSimulationEdfSh2013}, полученный по формуле~\ref{eq:RunawayBaseConvolution}, красным цветом показан спектр, соответствующий восстановленной функции распределения с того же рисунка.~\cite{Shevelev2013} }
+  \label{fig:runawayJetSimulationSpectrumSh2013}
+\end{figure}
+
+К сгеренрированному спектру была применена описанная в разделе~\ref{sec:runawayReconstructionMlem} процедура восстановления функции распределения убегающих электронов по энергии. Результат восстановления показан на рисунке~\ref{fig:runawayJetSimulationEdfSh2013} красным цветом. Восстановленное распределение электронов продемонстрировало очень близкое совпадение с модельным спектром и дало максимальную энергию 11~МэВ с очень высокой точностью. Отметим, что самые высокоэнергетичные отсчёты на спектре рентгеновского излучения не превышают значения по энергии в 10~МэВ. Причиной этого является ограниченная статистика регистрируемого спектра излучения: если бы спектр набирался бесконечно большое время, то и наиболее высокоэнергетичные кванты соответствовали бы максимальной энергии убегающих электронов. Однако поскольку убегающий электрон с энергией $\varepsilon$ с очень маленькой вероятностью генерирует квант с той же энергией $\varepsilon$, то при ограниченной статистике спектра с высокой вероятностью ни один из таких квантов не будет зарегистрирован, будут регистрироваться только кванты с меньшей энергией. Алгоритм восстановления использует информацию из всего спектра, тем самым он позволяет восстановить функцию распределения электронов для всей энергетической области.~\cite{Shevelev2013}
+
+% ----------------------------------------------------------
+
+\subsection{ Проверка корректности восстановления и отработка методики восстановления функции распределения убегающих электронов по энергии с помощью экспериментальных данных }
+
+Не смотря на отсутствие подходящего контролируемого источника убегающих электронов с известным распределением, можно провесит косвенную проверку корректности процедуры восстановления функции распределения. Для этого были использованы результаты, полученные в ходе эксперимента на токамаке Туман-3М. На этом токамаке были установлены два гамма-спектрометра NaI(Tl) $\varnothing$70$\times$70~мм, направленные на лимиттер под разными углами. Принципиальная схема экспериментальной установки показана на рисунке~\ref{fig:tumanHxdDetectors}. Детектор~1 имеет направление обзора, противоположное направлению движения убегающих электронов по токамаку, а направление обзора детектора~2 наоборот совпадает с направлением их движения. Для обоих детекторов А.~Шевелевым рассчитаны функции отклика на тормозное излучение, вызванное торможением на лимиттере быстрыми электронами, в диапазоне энергий 0.1--15~МэВ. 
+
+\begin{figure}[ht!]
+  \centerfloat{ \includegraphics[width=0.72\linewidth]{tumanHxdDetectors} }
+  \caption{ Расположение детекторов NaI(Tl) на токамаке Туман-3М.~\cite{Shevelev2013} }
+  \label{fig:tumanHxdDetectors}
+\end{figure}
+
+Спектры жёсткого рентгеновского излучения, зарегистрированные детекторами 1 и 2 в процессе нарастания тока плазмы Туман-3М в разреженном (плотность $2-3 \times 10^{19}$~м${}^{-3}$) разряде, показаны на рисунках~\ref{fig:tumanHxdSpectrumsEdf}, (a) и (b) чёрными точками. Оба спектра наблюдают одно и то же место на лимиттере, различие в спектрах обусловлено различием в направлении наблюдения. Затем из спектра, измеренного детектором~1, была восстановлена функция распределения электронов по энергии. Она показана на рисунке~\ref{fig:tumanHxdSpectrumsEdf} (c). При восстановлении никак не использовалась информация с детектора~2. По полученной таким образом функции распределения были обратно рассчитаны спектры жёсткого рентгена для детекторов 1 и 2, которые показаны рисунках~\ref{fig:tumanHxdSpectrumsEdf}, (a) и (b) синими линиями. Видно, что рассчитанные таким образом спектры очень близки к экспериментальным. Для детектора~1 такое совпадение ожидаемо, поскольку для получения функции распределения использовался спектр с этого детектора в качестве исходных данных. Информация с детектора~2 не использовалась при получении функции распределения, однако и для него видно очень хорошее совпадение экспериментального и вычисленного спектров. Это может свидетельствовать о корректности всей процедуры --- как расчёта аппаратных функций и функций генерации излучения, так и собственно процедуры восстановления.~\cite{Shevelev2013}
+
+\begin{figure}[ht!]
+  \centerfloat{ \includegraphics[width=0.52\linewidth]{tumanHxdSpectrumsEdf} }
+  \caption{ a --- спектр, измеренный с помощью детектора~1; b --- спектр, измеренный с помощью детектора~2; c --- восстановленная функция распределения убегающих электронов по энергии. На рисунках (a) и (b) чёрными точками показан измеренный спектр, синий линией --- спектр излучения, соответствующий функции распределения, изображённой на рисунке (c).~\cite{Shevelev2013} }
+  \label{fig:tumanHxdSpectrumsEdf}
+\end{figure}
+
+Стоит отметить, что было бы интересно восстановить функцию распределения убегающих электронов независимо с детекторов 1 и 2, и сравнивать уже сами функции распределения. Однако для более-менее корректного восстановления требуется достаточная статистика измеренных спектров. Для используемых на токамаке Туман-3М детекторов NaI(Tl) почти невозможно получить хорошую статистику на обоих детекторах: или на одном из детекторов она будет достаточно хорошей, а на другом --- недостаточной, или на втором она будет достаточной, но тогда загрузка первого детектора окажется чрезвычайно большой, и построить спектр окажется практически невозможно. 
+
+% ----------------------------------------------------------
+
+\subsection{ Влияние статистики и загрузки детектора на результаты восстановления функции распределения }
+
+Очевидно что точность восстановления функции распределения будет зависеть от статистики измеренного спектра. На рисунке~\ref{fig:ft2TestReStatistics} представлены смоделированные спектры жесткого рентгеновского излучения. Исходная модельная функция распределения имела колокообразный профиль с максимальной энергией 8~МэВ, показанный на правых рисунках (d)--(f) красными линиями. Использовались функции отклика детектора LaBr3(Ce) $\varnothing$25.4$\times$76.2~мм, с помощью которого проводились измерения на токамаке ФТ-2; они показаны на рисунке~\ref{fig:ft2HxrDetectrorsAndReResponse}~(а). Были использованы функции генерации излучения убегающими электронами, соответствующие условиям токамака ФТ-2; они показаны на рисунке~\ref{fig:ft2HxrDetectrorsAndReResponse}~(б). После вычисления спектра на него был наложен пуассоновский шум. Полный интеграл числа событий в модельном спектре составлял $10^3$, b) $10^4$ и c) $10^5$~событий. Спектры показаны на рисунке~\ref{fig:ft2TestReStatistics} (a)--(c) чёрными точками.~\cite{Shevelev2016}
+
+\begin{figure}[ht!]
+    \begin{minipage}[b][][b]{0.45\linewidth}\centering
+        \includegraphics[width=0.92\linewidth]{ft2HxrDetectrorsResponse} \\ а) \\
+    \end{minipage}
+    \hfill
+    \begin{minipage}[b][][b]{0.45\linewidth}\centering
+        \includegraphics[width=0.92\linewidth]{ft2HxrReGenerationResponse} \\ б) \\
+    \end{minipage}
+    \vspace{5mm}
+    \caption{ (а) --- отклик детектора LaBr3(Ce), использовавшегося в измерениях на токамаке ФТ-2, расчитанный кодом MCNP; (б) --- функции генерации тормозного жёсткого рентгеновского излучения убегающими электронами при взаимодействии с лимиттером, расчитанные кодом MCNP~\cite{Shevelev2016}. }
+    \label{fig:ft2HxrDetectrorsAndReResponse}
+\end{figure}
+
+\begin{figure}[ht!]
+  \centerfloat{ \includegraphics[width=0.95\linewidth]{ft2TestReStatistics} }
+  \caption{ Левая колонка --- модельные спектры жёсткого рентгеновского излучения, сгенерированные с разной статистикой: a) $10^3$, b) $10^4$ и c) $10^5$~событий. Правая колонка --- результаты восстановления модельной функции распределения электронов для различной статистики спектров: d) $10^3$, e) $10^4$ и f) $10^5$~событий. Модельная функция распределения электронов показана красной линией, чёрная линия --- результат восстановления. На левых графиках чёрными точками показаны сгенреированные спектры, синими линиями показаны свертки полученных в результате восстановления электронных распределений с функцией отклика детектора и функцией генерации излучения.~\cite{Shevelev2016} }
+  \label{fig:ft2TestReStatistics}
+\end{figure}
+
+Результат восстановления функции распределения по сгенерированным спектрам показан на рисунке~\ref{fig:ft2TestReStatistics} (d)--(f) чёрными линиями. Синие линии на левых графиках представляют собой свертки полученных распределений с функцией отклика детектора и функцией генерации излучения. На спектрах виден эффект улучшения результатов восстановления с улучшением статистики. Даже при низкой статистике в $10^3$~событий удалось корректно описать правый край функции распределения, а так же получить общую форму функции распределения. Отметим, что в экспериментах обычно статистика спектра лежит в исследуемом диапазоне $10^3$--$10^5$ событий в спектре~\cite{Shevelev2016}
+
+Обращает на себя внимание то, что максимальная энергия зарегистрированных квантов жёсткого рентгеновского излучения оказывается всегда меньше чем максимальная энергия убегающих электронов. Разница между максимальной энергией квантов излучения и максимальной энергией электронов тем больше, чем меньше статистика спектра. Это обусловлено сильно спадающим характером функции генерации излучения убегающими электронами, который хорошо виден на рисунках~\ref{fig:mcnpRunawayResponseJetSh2013} и \ref{fig:ft2HxrDetectrorsAndReResponse}.~\cite{Shevelev2016}
+
+%Так же отметим, что использовавшийся в старых работах метод определения максимальной энергии убегающих электронов по 
+
+Для исследования влияния скорости счёта на процедуру восстановления функции распределения были сгенерированы модельные осциллограммы с различной загрузкой детектора. Генерация проводилась методом, описанным в разделе~\ref{sec:SignalGeneration}. Были сгенерированы осциллограммы, соответствующие разной скоростью счёта детектора ($10^5$, $10^6$, $3\times10^6$, $10^7$~с${}^{-1}$) с распределением событий по амплитуде, соответствующим исходному распределению убегающих электронов по энергии. Затем эти осциллограммы были обработаны методом фиттинга (раздел~\ref{sec:FittingProcessing}), были построены спектры, которые были обработаны в соответствии с процедурой из раздела~\ref{sec:runawayReconstructionMlem} для восстановления функции распределения убегающих электронов по энергии. Сравнение исходной сгенерированной функции распределения и восстановленной функции распределения показано на рисунке~\ref{fig:ft2TestReCountRate}.~\cite{Shevelev2016}
+
+
+\begin{figure}[ht!]
+  \centerfloat{ \includegraphics[width=0.95\linewidth]{ft2TestReCountRate} }
+  \caption{ Восстановление функции распределения по модельным осциллограммам, соответствующим различной загрузке детектора. Красной линией показана сгенерированная осциллограмма, чёрной --- восстановленная из сгенерированного спектра.~\cite{Shevelev2016} }
+  \label{fig:ft2TestReCountRate}
+\end{figure}
+
+При увеличении загрузки детектора улучшается статистика спектра и, соответственно, улучшается качество восстановления функции распределения. С другой стороны, при увеличении загрузки детектора растёт и количество наложенных импульсов на осциллограмме, что приводит к искажениям измеренного спектра (уменьшение доли низких квантов жёсткого рентгена и наоборот появлению ложных высокоэнергетичных событий). В свою очередь это приводит к аретфактам при восстановлении функции распределения. Тем не менее, отметим что максимальная энергия восстановленного распределения убегающих электронов смещается всего на 100--150~кэВ. Видно что при загрузке $10^7$~событий в секунду в области высоких энергий появлялся паразитный пик (однако число электронов в этом пике не превышает 0.5\% от общего распределения, и поэтому этот эффект следует считать пренебрежимо малым). Следует отметить, что при скорости счета детектора выше $10^7$~с${}^{-1}$ измеряемые спектры могут быть искажены из-за насыщения ФЭУ~\cite{Loher20121}, однако в моделировании этот эффект не учитывался.~\cite{Shevelev2016}
+
+Таким образом, проведенный анализ смоделированных спектров жёсткого рентгеновского излучения с различной нагрузкой детектора и статистикой показал, что спектры, измеренные разработанным спектрометром LaBr 3(Ce) при скоростях счета до нескольких МГц, могут быть использованы для восстановления распределения энергии убегающих электронов во времени. В некоторых случаях восстановление полной функции распределения энергии убегающих электронов может привести к некоторым артефактам, которые следует тщательно анализировать. 
+
+% ----------------------------------------------------------
+
+\section{Выводы к главе 3}
+
+Рассмотрено применение алгоритма ML-EM для восстановления спектра гамма излучения источников по измеренному с помощью сцинтилляционных детекторов спектру излучения. Для проведения процедуры восстановления требуется вычислить аппаратную функцию детектора и то, как ослабляется поток гамма квантов на пути от источника к детектору. Это вычисление может быть выполнено кодом MCNP. Был предложен ряд модификаций для адаптации базового алгоритма к условиям, которые имеются в задачах гамма-спектрометрии. Для вычисления погрешности восстановленного спектра предлагается использовать метод Монте-Карло.
+
+Для проверки корректности процедуры восстановления были проведены эксперименты с калибровочными источниками ${}^{60}$Co и ${}^{137}$Cs излучения известной интенсивности. По восстановленным спектрам была рассчитана активность источников, которая совпала с точностью 1.5\% при обработке измеренного спектра с большой статистикой (время набора 300~с, расстояние до источника 25.5~см) и с точностью 2.5\% при обработке измеренного спектра с малой статистикой (время набора 2~с, расстояние до источника 25.5~см). Так же был проведён эксперимент с источником ${}^{152}$Eu, особенностью которого является наличие большого числа линий на спектре. В ходе восстановления удалось идентифицировать линии, в том числе не разрешённые на исходном измеренном спектре, и определить их интенсивность.  
+
+Показано, что алгоритм ML-EM с модификациями применим для восстановления функции распределения убегающих электронов по энергии по измеренному спектру тормозного жёсткого рентгеновского излучения. Предложен метод определения максимальной энергии убегающих электронов по восстановленной функции распределения. 
+
+Для проверки корректности процедуры восстановления функции распределения были проведены численные эксперименты. Было исследовано влияние статистики спектра и загрузки детектора на восстановленную функцию распределения. Показано, что при статистике спектра $10^3$ -- $10^5$~с${}^{-1}$ восстановленная функция соответствует исходной; показано, что при загрузке детектора $3 \times 10^6$~с${}^{-1}$ и выше восстановленная функция распределения оказывается искажённой из-за влияния наложений при обработке осциллограммы, однако в целом так же передаёт характер исходной функции распределения. Кроме того, для проверки процедуры восстановления были использованы результаты экспериментов на токамаке Туман-3М. В ходе этих экспериментов с помощью двух независимых детекторов измерялся спектр жёсткого рентгеновского излучения из одной и той же точки лимиттера, затем были проведены процедуры восстановления и сравнения, которые показали хорошее согласование результатов, полученных с различных независимых детекторов.
 
 % ==========================================================
 
