--- a/biblio/external.bib
+++ b/biblio/external.bib
@@ -884,6 +884,247 @@
   language = {russian}
 }
 
+@article{Loher20121,
+  title = {High count rate γ-ray spectroscopy with LaBr3:Ce scintillation detectors},
+  journal = {Nuclear Instruments and Methods in Physics Research Section A: Accelerators, Spectrometers, Detectors and Associated Equipment},
+  volume = {686},
+  pages = {1-6},
+  year = {2012},
+  issn = {0168-9002},
+  doi = {https://doi.org/10.1016/j.nima.2012.05.051},
+  url = {https://www.sciencedirect.com/science/article/pii/S0168900212005517},
+  author = {B. Löher and D. Savran and E. Fiori and M. Miklavec and N. Pietralla and M. Vencelj},
+  keywords = {Digital pulse shape analysis,  spectroscopy, Lanthanum bromide, Scintillator},
+}
+
+@article{Cooper2016,
+  author = {Cooper,C. M.  and Pace,D. C.  and Paz-Soldan,C.  and Commaux,N.  and Eidietis,N. W.  and Hollmann,E. M.  and Shiraki,D. },
+  title = {Applying the new gamma ray imager diagnostic to measurements of runaway electron Bremsstrahlung radiation in the DIII-D Tokamak (invited)},
+  journal = {Review of Scientific Instruments},
+  volume = {87},
+  number = {11},
+  pages = {11E602},
+  year = {2016},
+  doi = {10.1063/1.4961288},
+  URL = {https://aip.scitation.org/doi/abs/10.1063/1.4961288},
+  eprint = {https://aip.scitation.org/doi/pdf/10.1063/1.4961288}
+}
+
+@article{Seltzer1985,
+  title = {Bremsstrahlung spectra from electron interactions with screened atomic nuclei and orbital electrons},
+  journal = {Nuclear Instruments and Methods in Physics Research Section B: Beam Interactions with Materials and Atoms},
+  volume = {12},
+  number = {1},
+  pages = {95-134},
+  year = {1985},
+  issn = {0168-583X},
+  doi = {https://doi.org/10.1016/0168-583X(85)90707-4},
+  url = {https://www.sciencedirect.com/science/article/pii/0168583X85907074},
+  author = {Stephen M. Seltzer and Martin J. Berger},
+}
+
+
+@article{Esposito2003,
+  author = {Esposito,B.  and Martı́n-Solı́s,J. R.  and Poli,F. M.  and Mier,J. A.  and Sánchez,R.  and Panaccione,L. },
+  title = {Dynamics of high energy runaway electrons in the Frascati Tokamak Upgrade},
+  journal = {Physics of Plasmas},
+  volume = {10},
+  number = {6},
+  pages = {2350-2360},
+  year = {2003},
+  doi = {10.1063/1.1574328},
+  URL = { https://doi.org/10.1063/1.1574328},
+  eprint = { https://doi.org/10.1063/1.1574328}
+}
+
+@article{Vlainic2015, 
+  title={Post-disruptive runaway electron beams in the COMPASS tokamak}, 
+  volume={81}, 
+  DOI={10.1017/S0022377815000914}, 
+  number={5}, 
+  journal={Journal of Plasma Physics}, 
+  publisher={Cambridge University Press}, 
+  author={Vlainic, Milos and Mlynar, J. and Cavalier, J. and Weinzettl, V. and Paprok, R. and Imrisek, M. and Ficker, O. and Varavin, M. and Vondracek, P. and Noterdaeme, J.-M. and et al.}, 
+  year={2015}, 
+  pages={475810506}
+}
+
+@article{James2011,
+  doi = {10.1088/0029-5515/52/1/013007},
+  url = {https://doi.org/10.1088/0029-5515/52/1/013007},
+  year = 2011,
+  month = {12},
+  publisher = {{IOP} Publishing},
+  volume = {52},
+  number = {1},
+  pages = {013007},
+  author = {A.N. James and M.E. Austin and N. Commaux and N.W. Eidietis and T.E. Evans and E.M. Hollmann and D.A. Humphreys and A.W. Hyatt and V.A. Izzo and T.C. Jernigan and R.J. La Haye and P.B. Parks and E.J. Strait and G.R. Tynan and J.C. Wesley and J.H. Yu},
+  title = {Measurements of hard x-ray emission from runaway electrons in {DIII}-D},
+  journal = {Nuclear Fusion}
+}
+
+@article{Nocente2010,
+  author = {Nocente,M.  and Tardocchi,M.  and Chugunov,I.  and Pereira,R. C.  and Edlington,T.  and Fernandes,A. M.  and Gin,D.  and Grosso,G.  and Kiptily,V.  and Murari,A.  and Neto,A.  and Perelli Cippo,E.  and Pietropaolo,A.  and Proverbio,I.  and Shevelev,A.  and Sousa,J.  and Syme,B.  and Gorini,G. },
+  title = {Energy resolution of gamma-ray spectroscopy of JET plasmas with a LaBr3 scintillator detector and digital data acquisition},
+  journal = {Review of Scientific Instruments},
+  volume = {81},
+  number = {10},
+  pages = {10D321},
+  year = {2010},
+  doi = {10.1063/1.3501386},
+  URL = { https://doi.org/10.1063/1.3501386},
+  eprint = { https://doi.org/10.1063/1.3501386}
+}
+
+
+@article{Savrukhin2002,
+  author = {Savrukhin,P. V. },
+  title = {Measurements of the nonthermal x-ray emission in the T-10 tokamak using CdTe detectors},
+  journal = {Review of Scientific Instruments},
+  volume = {73},
+  number = {12},
+  pages = {4243-4245},
+  year = {2002},
+  doi = {10.1063/1.1519938},
+  URL = { https://doi.org/10.1063/1.1519938 },
+  eprint = { https://doi.org/10.1063/1.1519938 }
+}
+
+@article{Pankratov1999,
+  author = {Pankratov, Igor},
+  year = {1999},
+  month = {02},
+  pages = {145-148},
+  title = {Analysis of the synchrotron radiation spectra of runaway electrons},
+  volume = {25},
+  journal = {Plasma Physics Reports}
+}
+
+
+@article{Stahl2013,
+  author = {Stahl,A.  and Landreman,M.  and Papp,G.  and Hollmann,E.  and Fülöp,T. },
+  title = {Synchrotron radiation from a runaway electron distribution in tokamaks},
+  journal = {Physics of Plasmas},
+  volume = {20},
+  number = {9},
+  pages = {093302},
+  year = {2013},
+  doi = {10.1063/1.4821823},
+  URL = {  https://doi.org/10.1063/1.4821823   },
+  eprint = { https://doi.org/10.1063/1.4821823 }
+}
+
+@article{Costley1974,
+  title = {Electron Cyclotron Emission from a Tokamak Plasma: Experiment and Theory},
+  author = {Costley, A. E. and Hastie, R. J. and Paul, J. W. M. and Chamberlain, J.},
+  journal = {Phys. Rev. Lett.},
+  volume = {33},
+  issue = {13},
+  pages = {758--761},
+  numpages = {0},
+  year = {1974},
+  month = {9},
+  publisher = {American Physical Society},
+  doi = {10.1103/PhysRevLett.33.758},
+  url = {https://link.aps.org/doi/10.1103/PhysRevLett.33.758}
+}
+
+@article{Kudyakov2008,
+  doi = {10.1088/0029-5515/48/12/122002},
+  url = {https://doi.org/10.1088/0029-5515/48/12/122002},
+  year = 2008,
+  month = {11},
+  publisher = {{IOP} Publishing},
+  volume = {48},
+  number = {12},
+  pages = {122002},
+  author = {T. Kudyakov and K.H. Finken and M.W. Jakubowski and M. Lehnen and Y. Xu and B. Schweer and T. Toncian and G. Van Wassenhove and O. Willi and},
+  title = {Spatially and temporally resolved measurements of runaway electrons in the {TEXTOR} tokamak},
+  journal = {Nuclear Fusion}
+}
+
+@article{Zebrowski2018,
+  doi = {10.1088/1742-6596/959/1/012002},
+  url = {https://doi.org/10.1088/1742-6596/959/1/012002},
+  year = 2018,
+  month = {1},
+  publisher = {{IOP} Publishing},
+  volume = {959},
+  pages = {012002},
+  author = {J Zebrowski and L Jakubowski and M Rabinski and M J Sadowski and M J Jakubowski and R Kwiatkowski and K Malinowski and R Mirowski and J Mlynar and O Ficker and V Weinzettl and F Causa},
+  title = {Studies of runaway electrons via Cherenkov effect in tokamaks},
+  journal = {Journal of Physics: Conference Series}
+}
+
+@article{Lehnen2009,
+  title = {Runaway generation during disruptions in JET and TEXTOR},
+  journal = {Journal of Nuclear Materials},
+  volume = {390-391},
+  pages = {740-746},
+  year = {2009},
+  note = {Proceedings of the 18th International Conference on Plasma-Surface Interactions in Controlled Fusion Device},
+  issn = {0022-3115},
+  doi = {https://doi.org/10.1016/j.jnucmat.2009.01.200},
+  url = {https://www.sciencedirect.com/science/article/pii/S0022311509002256},
+  author = {M. Lehnen and S.S. Abdullaev and G. Arnoux and S.A. Bozhenkov and M.W. Jakubowski and R. Jaspers and V.V. Plyusnin and V. Riccardo and U. Samm},
+}
+
+@article{Hollmann2017,
+  author = {Hollmann,E. M.  and Commaux,N.  and Eidietis,N. W.  and Lasnier,C. J.  and Rudakov,D. L.  and Shiraki,D.  and Cooper,C.  and Martin-Solis,J. R.  and Parks,P. B.  and Paz-Soldan,C. },
+  title = {Study of Z scaling of runaway electron plateau final loss energy deposition into wall of DIII-D},
+  journal = {Physics of Plasmas},
+  volume = {24},
+  number = {6},
+  pages = {062505},
+  year = {2017},
+  doi = {10.1063/1.4985086},
+  URL = { https://doi.org/10.1063/1.4985086},
+  eprint = { https://doi.org/10.1063/1.4985086}
+}
+
+@article{Strachan1977,
+  doi = {10.1088/0029-5515/17/1/015},
+  url = {https://doi.org/10.1088/0029-5515/17/1/015},
+  year = 1977,
+  month = {2},
+  publisher = {{IOP} Publishing},
+  volume = {17},
+  number = {1},
+  pages = {140--144},
+  author = {J.D. Strachan and E.B. Meservey and W. Stodiek and R.A. Naumann and F. Girshick},
+  title = {Photo-neutron production in the {PLT} tokamak},
+  journal = {Nuclear Fusion},
+}
+
+@article{Pieroni1975,
+  title = {Observation of Non-Maxwellian Electron Distribution Functions in the Alcator Device by Means of Thomson Scattering and Their Interpretation},
+  author = {Pieroni, L. and Segre, S. E.},
+  journal = {Phys. Rev. Lett.},
+  volume = {34},
+  issue = {15},
+  pages = {928--930},
+  year = {1975},
+  month = {4},
+  publisher = {American Physical Society},
+  doi = {10.1103/PhysRevLett.34.928},
+  url = {https://link.aps.org/doi/10.1103/PhysRevLett.34.928}
+}
+
+@article{Wurden2014,
+  author = {Wurden,G. A.  and Oertel,J. A.  and Evans,T. E. },
+  title = {An in situ runaway electron diagnostic for DIII-D},
+  journal = {Review of Scientific Instruments},
+  volume = {85},
+  number = {11},
+  pages = {11E111},
+  year = {2014},
+  doi = {10.1063/1.4890398},
+  URL = {  https://doi.org/10.1063/1.4890398  },
+  eprint = {  https://doi.org/10.1063/1.4890398 }
+}
+
+
+
 %@ARTICLE{Article,
 %  author   = {Peter Adams},
 %  title    = {The title of the work},
